--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "email": "email dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-beta.8",
     "@clerk/nextjs": "^6.9.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
@@ -21,9 +23,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "inngest": "^3.39.2",
     "lucide-react": "^0.525.0",
     "next": "15.1.0",
     "next-themes": "^0.4.6",
@@ -33,6 +37,7 @@
     "react-hook-form": "^7.59.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.0.2",
+    "resend": "^4.6.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
@@ -47,6 +52,7 @@
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
     "prisma": "^6.10.1",
+    "react-email": "4.0.17",
     "tailwindcss": "^3.4.1"
   }
 }
