--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.8",
+    "@bufbuild/protobuf": "^2.6.0",
     "@clerk/nextjs": "^6.9.0",
+    "@connectrpc/connect": "^2.0.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-checkbox": "^1.3.2",
